--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pytz==2024.1
 pyzmq==26.0.3
 six==1.16.0
 stack-data==0.6.3
+tabulate==0.9.0
 tornado==6.4.1
 traitlets==5.14.3
 typing_extensions==4.12.2
